--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         </activity>
 
         <activity android:name=".FrontActivity.MainActivitys"
-            android:label="@string/title_activity_base"
+            android:label="@string/map_app"
             android:theme="@style/AppTheme.NoActionBar"/>
 
 
@@ -46,16 +46,16 @@
             android:theme="@style/AppTheme.NoActionBar"/>
 
         <activity android:name=".Manipulation.ModifyActivity"
-            android:label="@string/app_name"
+            android:label="@string/modify"
             android:theme="@style/AppTheme.NoActionBar"/>
 
         <activity android:name=".Manipulation.SettingsActivity"
-            android:label="@string/app_name"
+            android:label="@string/selection"
             android:theme="@style/AppTheme.NoActionBar"/>
 
         <activity android:name=".Manipulation.ListActivity"
             android:theme="@style/AppTheme.NoActionBar"
-            android:label="@string/app_name"/>
+            android:label="@string/listing"/>
 
 
     </application>
